added CMD to docker

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -121,3 +121,5 @@ RUN pip install \
     six==1.10.0 \
     uritemplate==3.0.0 \
     tensorflow-gpu==1.4.1
+
+CMD ["python3", "tools/process.py" "--input_dir sketches/resized" "--operation edges --output_dir" "sketches/edges"]
